--- a/app/modules/welcome/scss/_welcome.scss
+++ b/app/modules/welcome/scss/_welcome.scss
@@ -40,7 +40,7 @@ section#status{
 @media screen and (min-width: $small-screen) {
 }
 
-$welcome-bg-filter: rgba(#124056, 0.5);
+$welcome-bg-filter: rgba(#123456, 0.5);
 
 @import "landing_screen";
 // @import "tutorial";
